--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,4 @@ module-root = "gs_quant"
 tests-root = "gs_quant/test"
 test-framework = "pytest"
 ignore-paths = []
-formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]
+formatter-cmds = ["disabled"]
